<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@color/light_black">

        <TextView
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:text="@string/textView1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="9dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/imageView"
            app:srcCompat="@drawable/_puntosnuevo" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/green_blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textView2"
            android:textColor="@color/another_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="-38dp"
            android:text="@string/textView3"
            android:textColor="@color/another_white" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textView4"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="-38dp"
            android:text="@string/textView5"
            android:textColor="@color/gray" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textView6"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="-38dp"
            android:text="@string/textView7"
            android:textColor="@color/gray" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textView8"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="-38dp"
            android:text="@string/textView9"
            android:textColor="@color/gray" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textView10"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="-38dp"
            android:text="@string/textView11"
            android:textColor="@color/gray" />

    </TableRow>

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textView3"
            android:textColor="@color/green_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="-38dp"
            android:text="@string/textView12"
            android:textColor="@color/gray" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textView13"
            android:textColor="@color/green_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="-38dp"
            android:text="@string/textView7"
            android:textColor="@color/gray" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textView14"
            android:textColor="@color/green_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="-38dp"
            android:text="@string/textView15"
            android:textColor="@color/gray" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="100dp"
            android:text="@string/textView16"
            android:textColor="@color/green_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginStart="-38dp"
            android:text="@string/textView17"
            android:textColor="@color/gray" />

    </TableRow>
</TableLayout>